force-app/main/default/objects/Account/fields/Active_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Active_Job_ID__c</fullName>
    <description>Este campo es necesario para crear jobs en el Normalizador (Address Verification)</description>
    <label>Active Job ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>