force-app/main/default/objects/Account/fields/msf_CentralizeSends__c.field-meta.xml
<CustomField>
    <fullName>msf_CentralizeSends__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check para que cada miembro pueda recibir una revista</description>
    <label>Centralizar envíos</label>
    <type>Checkbox</type>
</CustomField>