force-app/main/default/objects/Account/fields/msf_Direccion_Concat__c.field-meta.xml
<CustomField>
    <fullName>msf_Direccion_Concat__c</fullName>
    <formula>BillingStreet  &amp; &quot; &quot; &amp; BillingPostalCode  &amp; &quot; &quot; &amp; BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direccion Concat</label>
    <type>Text</type>
</CustomField>