force-app/main/default/objects/Account/fields/msf_IslaBilling__c.field-meta.xml
<CustomField>
    <fullName>msf_IslaBilling__c</fullName>
    <label>Isla dirección principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>