force-app/main/default/objects/Account/fields/msf_IslaShipping__c.field-meta.xml
<CustomField>
    <fullName>msf_IslaShipping__c</fullName>
    <label>Isla otra dirección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>