force-app/main/default/objects/Account/fields/msf_IsOrganizationGroup__c.field-meta.xml
<CustomField>
    <fullName>msf_IsOrganizationGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es un grupo de Empresas u Organizaciones</label>
    <type>Checkbox</type>
</CustomField>