force-app/main/default/objects/Account/fields/msf_IsPrimaryContactOrg__c.field-meta.xml
<CustomField>
    <fullName>msf_IsPrimaryContactOrg__c</fullName>
    <formula>IF(ISBLANK(npe01__One2OneContact__c ),
  FALSE,
  IF( npe01__One2OneContact__r.RecordType.DeveloperName = &apos;Organization&apos;, TRUE, FALSE)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es organización el contacto principal</label>
    <type>Checkbox</type>
</CustomField>