force-app/main/default/objects/Account/fields/npo02__SYSTEM_CUSTOM_NAMING__c.field-meta.xml
<CustomField>
    <fullName>npo02__SYSTEM_CUSTOM_NAMING__c</fullName>
    <inlineHelpText>Para Cuentas Familias, especifica que campos de nombres no deben completarse automáticamente por el código de Familias.</inlineHelpText>
    <label>_SYSTEM: CUSTOM NAMING</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Formal_Greeting__c</fullName>
            </value>
            <value>
                <fullName>Informal_Greeting__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>