force-app/main/default/objects/Account/fields/npsp__Batch__c.field-meta.xml
<CustomField>
    <fullName>npsp__Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lote en el que la cuenta fue creada.</inlineHelpText>
    <label>Batch</label>
    <referenceTo>npsp__Batch__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>