force-app/main/default/objects/Account/fields/npsp__Matching_Gift_Administrator_Name__c.field-meta.xml
<CustomField>
    <fullName>npsp__Matching_Gift_Administrator_Name__c</fullName>
    <description>The name of the company&apos;s Matching Gift administrator.</description>
    <inlineHelpText>El nombre del administrador de la donación complementaria en la empresa.</inlineHelpText>
    <label>Matching Gift Administrator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>