force-app/main/default/objects/Account/fields/npsp__Matching_Gift_Comments__c.field-meta.xml
<CustomField>
    <fullName>npsp__Matching_Gift_Comments__c</fullName>
    <description>Additional notes about the company&apos;s Matching Gift program.</description>
    <inlineHelpText>Notas adicionales sobre el programa de donación complementaria de la empresa.</inlineHelpText>
    <label>Matching Gift Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>