force-app/main/default/objects/Account/fields/npsp__Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>npsp__Membership_Status__c</fullName>
    <description>The Membership status of this Household, for example, Current, Expired, or Grace Period. The value is based on Membership End Date and Grace Period. The Default Grace Period is set in NPSP Settings, under Household Settings. This field is read only.</description>
    <formula>if ( npo02__MembershipEndDate__c  &lt;today(), if (npo02__MembershipEndDate__c  &gt; ( TODAY() -
IF(NOT(ISNULL($Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c)), $Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c, 30)) , &quot;Grace Period&quot; , &quot;Expired&quot;) , if(isnull(npo02__MembershipEndDate__c ),&quot;&quot;,&quot;Current&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fórmula: Actual, Vencido o en período de gracia. Período de gracia por defecto se establece en la configuración del NPSP.</inlineHelpText>
    <label>Membership Status</label>
    <type>Text</type>
</CustomField>