force-app/main/default/objects/Account/fields/smartystreets__Billing_Footnotes__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Billing_Footnotes__c</fullName>
    <label>Billing Footnotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>