force-app/main/default/objects/Account/fields/smartystreets__Billing_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Billing_Last_Verified__c</fullName>
    <description>Last date the billing address was verified</description>
    <inlineHelpText>Last date the billing address was verified</inlineHelpText>
    <label>Billing Last Verified</label>
    <type>DateTime</type>
</CustomField>