force-app/main/default/objects/Account/fields/smartystreets__Billing_Verified__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Billing_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Current Billing Address been verified by SmartyStreets?</description>
    <inlineHelpText>Has the Current Billing Address been verified by SmartyStreets?</inlineHelpText>
    <label>Billing Verified</label>
    <type>Checkbox</type>
</CustomField>