force-app/main/default/objects/Account/fields/smartystreets__BillingVerificationUsed__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__BillingVerificationUsed__c</fullName>
    <label>Billing Verification Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SmartyStreets</fullName>
            </value>
            <value>
                <fullName>Google Maps</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>