force-app/main/default/objects/Account/fields/smartystreets__Shipping_Do_Not_Verify__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Shipping_Do_Not_Verify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box so that the shipping address is never verified by the SmartyStreets service</description>
    <inlineHelpText>Check this box so that the shipping address is never verified by the SmartyStreets service</inlineHelpText>
    <label>Shipping Do Not Verify</label>
    <type>Checkbox</type>
</CustomField>