force-app/main/default/objects/Account/fields/smartystreets__Shipping_Footnotes__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Shipping_Footnotes__c</fullName>
    <label>Shipping Footnotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>