force-app/main/default/objects/Account/fields/smartystreets__Shipping_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Shipping_Last_Verified__c</fullName>
    <description>Last date the shipping address was verified</description>
    <inlineHelpText>Last date the shipping address was verified</inlineHelpText>
    <label>Shipping Last Verified</label>
    <type>DateTime</type>
</CustomField>