force-app/main/default/objects/Account/fields/smartystreets__Shipping_Verified__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Shipping_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the Current Shipping Address been verified by SmartyStreets?</description>
    <inlineHelpText>Has the Current Shipping Address been verified by SmartyStreets?</inlineHelpText>
    <label>Shipping Verified</label>
    <type>Checkbox</type>
</CustomField>