force-app/main/default/objects/Account/fields/smartystreets__ShippingVerificationUsed__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__ShippingVerificationUsed__c</fullName>
    <inlineHelpText>SmartyStreets, Google Maps, or UPS</inlineHelpText>
    <label>Shipping Verification Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SmartyStreets</fullName>
            </value>
            <value>
                <fullName>Google Maps</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>