force-app/main/default/objects/Account/fields/test_fecha__c.field-meta.xml
<CustomField>
    <fullName>test_fecha__c</fullName>
    <label>test_fecha</label>
    <type>Date</type>
</CustomField>