force-app/main/default/objects/Account/recordTypes/Anonymous.recordType-meta.xml
<RecordType>
    <fullName>Anonymous</fullName>
    <active>true</active>
    <label>Anonymous</label>
</RecordType>